@@ -1,3 +1,6 @@
+2008-03-11  Cedric GESTES  <gestes@aldebaran-robotics.com>
+	* emacs: added cmake-mode
+
 2008-03-04  Cedric GESTES  <gestes@aldebaran-robotics.com>
 	* emacs: automatic compilation window scroll
 	* env: added PATH for /sbin
